--- a/playbooks/roles/provision/tasks/main.yml
+++ b/playbooks/roles/provision/tasks/main.yml
@@ -7,18 +7,35 @@
     name:
       - socat
       - netcat-openbsd
+      - python
+      - python-pip
       - python3
+      - python3-pip
       - openjdk-11-jre
       - supervisor
+      - mariadb-server
+      - mariadb-client
+      - redis-server
+      - redis
     state: latest
     update_cache: yes
     cache_valid_time: 86400
   tags:
     - packages
+- name: Installing Python packages
+  pip:
+    name:
+      - PyMySQL
+  tags:
+    - python-packages
 - name: Setting up accounts
   include: accounts.yml
   tags:
     - accounts
+- name: Setting up database
+  include: database.yml
+  tags:
+    - database
 - name: Setting up Minecraft server
   include: server.yml
   tags:
